...
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".Controller.NewMeetingActivity"
        tools:showIn="@layout/activity_new_meeting">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:id="@+id/new_meeting_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meeting_subject"
                android:textSize="@dimen/text_size"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_subject"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:id="@+id/new_meeting_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meeting_date"
                android:textSize="@dimen/text_size"
                android:inputType="date"
                android:clickable="true"
...
                android:dropDownSelector="@color/colorPrimary"
                android:entries="@array/Meeting_Room"
                />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ExpandableListView_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/new_meeting_place"
            app:layout_constraintRight_toRightOf="parent"
            >


            <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView

                android:id="@+id/autocomplete_participant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:hint="@string/participant"
                android:clickable="true"
...
                android:completionThreshold="0"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/new_meeting_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_meeting"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
...
