<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/filter_date_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/filter_dialog_title_date"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <View

        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/filter_date_title"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/from_date_layout"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <EditText
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:id="@+id/from_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="From :"
            android:inputType="date" />


    </com.google.android.material.textfield.TextInputLayout>

    <View

        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/from_date_layout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:id="@+id/to_date_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/line"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:id="@+id/to_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            android:textSize="@dimen/text_size"
            android:clickable="true"
            android:focusable="false"
            android:hint="To :" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/TextButton_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/to_date_layout"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:text="Ok"
        android:clickable="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size"/>

    <TextView
        android:id="@+id/TextButton_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/TextButton_ok"
        app:layout_constraintBottom_toBottomOf="@id/TextButton_ok"
        app:layout_constraintRight_toLeftOf="@id/TextButton_ok"
        android:layout_marginEnd="100dp"
        android:text="Cancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size"/>


</androidx.constraintlayout.widget.ConstraintLayout>